feat: apply normalization and classifier updates with docs refresh